Fix project modal container scaling on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -719,6 +719,116 @@ main {
   line-height: 1.6;
 }
 
+/* Modal Container */
+
+.modal {
+  display: none; /* hidden by default */
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1000;
+  overflow: hidden; /* Prevents scrolling outside the modal */
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+}
+
+.modal-content {
+  background: var(--bg-gradient-jet);
+  padding: 5%;
+  border-radius: 14px;
+  max-height: 80vh;
+  text-align: center;
+  overflow-y: auto; /* Allows scrolling within the modal */
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-content img {
+  width: 80%;
+  max-width: 600px;
+  margin: 20px auto;
+  border-radius: 14px;
+}
+
+.modal-content iframe {
+  margin: auto auto;
+  border: none;
+  border-radius: 14px;
+}
+
+.modal-content p,
+.modal-content h2,
+.modal-content h4 {
+  text-align: justify;
+  margin: 10px 0;
+}
+
+.social-item {
+  display: inline; /* Inline display for list items */
+}
+
+.modal-title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-content h4 {
+  justify-content: flex-start;
+}
+
+.modal-title .social-link {
+  margin-left: 10px; /* Space between title and GitHub icon */
+}
+
+/* Hiding the scrollbar */
+.modal-content::-webkit-scrollbar {
+  display: none;
+}
+
+.modal-url-buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  margin-top: 20px;
+}
+
+@media (max-width: 800px) {
+  .modal-url-buttons {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+.modal-url-btn {
+  background: var(--border-gradient-onyx);
+  box-shadow: var(--shadow-2);
+  border-radius: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--white-2);
+  font-size: 17px;
+  opacity: 0.7;
+  padding: 5px 10px;
+  border: 1px solid var(--jet);
+}
+
+.modal-url-btn:hover,
+.modal-url-btn:focus {
+  opacity: 1;
+}
+
+.modal-url-btn ion-icon {
+  --ionicon-stroke-width: 50px;
+}
+
 /**
  * #technologies 
  */
@@ -1289,6 +1399,11 @@ textarea.form-input::-webkit-resizer {
   .papers-banner-box {
     height: auto;
   }
+
+  /* Modal container */
+  .modal-content {
+    width: 90vw;
+  }
 }
 
 /**
@@ -1487,6 +1602,10 @@ textarea.form-input::-webkit-resizer {
     width: 35px;
   }
 
+  .modal-content {
+    width: 90vw;
+  }
+
   /* technologies */
 
   .technologies-list {
@@ -1670,6 +1789,11 @@ textarea.form-input::-webkit-resizer {
     width: max-content;
     margin-left: auto;
   }
+
+  /* Modal container */
+  .modal-content {
+    width: 75vw;
+  }
 }
 
 /**
@@ -1777,6 +1901,11 @@ textarea.form-input::-webkit-resizer {
 
   .papers-banner-box {
     height: 230px;
+  }
+
+  /* Modal container */
+  .modal-content {
+    width: 70vw;
   }
 }
 
@@ -1917,116 +2046,9 @@ textarea.form-input::-webkit-resizer {
   .timeline-text {
     max-width: 700px;
   }
-}
 
-/* Modal Container */
-
-.modal {
-  display: none; /* hidden by default */
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 1000;
-  overflow: hidden; /* Prevents scrolling outside the modal */
-  align-items: center;
-  justify-content: center;
-  padding: 20px;
-}
-
-.modal-content {
-  background: var(--bg-gradient-jet);
-  padding: 5%;
-  border-radius: 14px;
-  width: 50vw;
-  min-width: 550px;
-  max-height: 80vh;
-  text-align: center;
-  overflow-y: auto; /* Allows scrolling within the modal */
-  position: relative;
-  display: flex;
-  flex-direction: column;
-}
-
-.modal-content img {
-  width: 90%;
-  max-width: 900px;
-  margin: 20px auto;
-  border-radius: 14px;
-}
-
-.modal-content iframe {
-  margin: auto auto;
-  border: none;
-  border-radius: 14px;
-}
-
-.modal-content p,
-.modal-content h2,
-.modal-content h4 {
-  text-align: justify;
-  margin: 10px 0;
-}
-
-.social-item {
-  display: inline; /* Inline display for list items */
-}
-
-.modal-title {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.modal-content h4 {
-  justify-content: flex-start;
-}
-
-.modal-title .social-link {
-  margin-left: 10px; /* Space between title and GitHub icon */
-}
-
-/* Hiding the scrollbar */
-.modal-content::-webkit-scrollbar {
-  display: none;
-}
-
-.modal-url-buttons {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  margin-top: 20px;
-}
-
-@media (max-width: 800px) {
-  .modal-url-buttons {
-    flex-direction: column;
-    align-items: center;
+  /* Modal container */
+  .modal-content {
+    width: 60vw;
   }
-}
-
-.modal-url-btn {
-  background: var(--border-gradient-onyx);
-  box-shadow: var(--shadow-2);
-  border-radius: 8px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: var(--white-2);
-  font-size: 17px;
-  opacity: 0.7;
-  padding: 5px 10px;
-  border: 1px solid var(--jet);
-}
-
-.modal-url-btn:hover,
-.modal-url-btn:focus {
-  opacity: 1;
-}
-
-.modal-url-btn ion-icon {
-  --ionicon-stroke-width: 50px;
 }
